# shorty

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
src/: main.rs  utils.rs
src/commands/: add.rs  backup.rs  categories.rs  config.rs  edit.rs  import_export.rs  interactive.rs  list.rs  plugins.rs  remove.rs  search.rs  shell_integration.rs  stats.rs  sync.rs  templates.rs  uninstall.rs  update.rs  validate.rs
src/updater/: checker.rs  github.rs  installer.rs  mod.rs
