[package]
name = "shorty"
version = "1.3.0"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
dirs = "5.0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
which = "6.0"
crossterm = "0.28"
ratatui = "0.29"
unicode-width = "0.2"
whoami = "1.4"

