[package]
name = "shorty"
version = "1.5.0"
edition = "2021"
description = "A shell alias manager for organizing and maintaining command-line aliases"
license = "MIT"
repository = "https://github.com/anggasct/shorty"
homepage = "https://github.com/anggasct/shorty"
keywords = ["alias", "shell", "cli", "terminal", "productivity"]
categories = ["command-line-utilities"]
authors = ["anggasct"]

[dependencies]
clap = { version = "4.3", features = ["derive"] }
clap_complete = "4.4"
dirs = "5.0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
which = "6.0"
crossterm = "0.28"
ratatui = "0.29"
unicode-width = "0.2"
whoami = "1.4"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1", features = ["rt"] }
sha2 = "0.10"

